Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29688

Text gets typed from right to left in Debugger -> GDB -> Additional Commands text fields

    XMLWordPrintable

Details

    • 6cd2e6de0 (12.0)

    Description

      Qt Creator 12.0.0-beta1 (11.0.82)Based on Qt 6.5.3 (GCC 10.3.1 20210422 (Red Hat 10.3.1-1), x86_64)
      Built on Oct 3 2023 03:45:21

      Steps to reproduce (on Linux):

      1. Open Qt Creator 12.0.0-beta1 (installed content was B2Qt 6.6.0 RC and apalis-imx6 toolchain, but probably any Qt version reproduces the issue)
      2. Open Preferences -> Debugger -> GDB
      3. Start typing to any of the text fields at the bottom (Additional Startup Commands, Additional Attach Commands)

      Expected result:

      When typing 'set auto-solib-dda 0' to the text field, there should be 'set auto-solib-dda 0' in the text field.

      Actual result:

      When typing 'set auto-solib-dda 0' to the text field, the text is typed from right to left and is '0 dda-bilos-otua tes'. Also if you move cursor to the far right and press backspace, one character gets removed and the cursor jumps to the far left. Reproduces on Linux machines at least.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            madwinter Marcus Tillmanns
            mipohjan Milla Pohjanheimo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes