Utils: Fix StringAspect TextEditDisplay

Remove the unnecessary re-setting of the text edit
content due to the undo => edit => undo => edit
connection.

Fixes: QTCREATORBUG-29688
Change-Id: I7838ed594ae3741df757fa5eb3cdd90506428be3
Reviewed-by: hjk <hjk@qt.io>